welcome.lessons.welcome.bat.bool2.InOrderEqual.scala.error
inOrderEqual:3: error: not found: value iqualOk
	if (iqualOk) {
            ^